k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fibonacci-prod
  labels:
    app.kubernetes.io/name: fibonacci-api
    app.kubernetes.io/part-of: fibonacci-platform
